export const snapshot = {};

snapshot[`Load the pages of a site 1`] = `9`;

snapshot[`Load the pages of a site 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      asset: true,
      engines: undefined,
      ext: ".png",
      pageLoader: [AsyncFunction: binary],
    },
    {
      asset: true,
      engines: undefined,
      ext: ".css",
      pageLoader: [AsyncFunction: text],
    },
  ],
}
`;

snapshot[`Load the pages of a site 3`] = `
[
  {
    dest: "/static.yml",
    parent: "/",
    remote: undefined,
    src: "/static.yml",
  },
]
`;

snapshot[`Load the pages of a site 4`] = `
{
  content: "Uint8Array(1503)",
  data: {
    content: "Uint8Array(1503)",
    date: 1970-01-01T00:00:00.000Z,
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Default site name",
    tags: [
      "pages",
    ],
    url: "/favicon.png",
  },
  dest: {
    ext: ".png",
    path: "/favicon",
  },
  src: {
    asset: true,
    ext: ".png",
    path: "/favicon",
    remote: undefined,
    slug: "favicon",
  },
}
`;

snapshot[`Load the pages of a site 5`] = `
{
  content: "Content of Page 5",
  data: {
    content: "Content of Page 5",
    date: 1970-01-01T00:00:00.000Z,
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Default site name",
    tags: [
      "pages",
    ],
    title: "Page 5",
    url: "/page5/",
  },
  dest: {
    ext: ".html",
    path: "/page5/index",
  },
  src: {
    asset: undefined,
    ext: ".yaml",
    path: "/page5",
    remote: undefined,
    slug: "page5",
  },
}
`;

snapshot[`Load the pages of a site 6`] = `
{
  content: "Content of Page 2",
  data: {
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: "Content of Page 2",
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Folder overrided site name",
    tags: [
      "pages",
      "sub-pages",
    ],
    title: "Page 2",
    url: "/overrided-page2/",
  },
  dest: {
    ext: ".html",
    path: "/overrided-page2/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.json",
    path: "/pages/2020-06-21_page2",
    remote: undefined,
    slug: "page2",
  },
}
`;

snapshot[`Load the pages of a site 7`] = `
{
  content: "Content of Page 4 in Overrided site name, from the file /pages/2021-01-02-18-32_page4.tmpl.ts",
  data: {
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Overrided site name",
    tags: [
      "pages",
      "sub-pages",
    ],
    title: "Page 4",
    url: "/pages/page4/",
  },
  dest: {
    ext: ".html",
    path: "/pages/page4/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.ts",
    path: "/pages/2021-01-02-18-32_page4",
    remote: undefined,
    slug: "page4",
  },
}
`;

snapshot[`Load the pages of a site 8`] = `
{
  content: "<p>Content of Page 6</p>
",
  data: {
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: "Content of Page 6
",
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Folder overrided site name",
    tags: [
      "pages",
      "sub-pages",
      "page6",
    ],
    title: "Page 6",
    url: "/pages/page6/",
  },
  dest: {
    ext: ".html",
    path: "/pages/page6/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/pages/2021-12-29_page6",
    remote: undefined,
    slug: "page6",
  },
}
`;

snapshot[`Load the pages of a site 9`] = `
{
  content: "<p>Content of Page 1</p>
",
  data: {
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: "Content of Page 1
",
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    draft: true,
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
      {
        resize: [
          900,
          900,
        ],
        suffix: "-big",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Custom title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Folder overrided site name",
    tags: [
      "pages",
      "sub-pages",
      "page1",
    ],
    title: "Page 1",
    url: "/pages/page1/",
  },
  dest: {
    ext: ".html",
    path: "/pages/page1/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/pages/page1",
    remote: undefined,
    slug: "page1",
  },
}
`;

snapshot[`Load the pages of a site 10`] = `
{
  content: "Content of Page 3",
  data: {
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: "Content of Page 3",
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Folder overrided site name",
    tags: [
      "pages",
      "sub-pages",
    ],
    title: "Page 3",
    url: "/page_3",
  },
  dest: {
    ext: "",
    path: "/page_3",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.js",
    path: "/pages/page3",
    remote: undefined,
    slug: "page3",
  },
}
`;

snapshot[`Load the pages of a site 11`] = `
{
  content: "Content of Page 7",
  data: {
    colors: [
      "#ff0000",
      "#0000ff",
      "#00ff00",
    ],
    content: "Content of Page 7",
    date: 1970-01-01T00:00:00.000Z,
    documents: [
      {
        title: "Document 1",
      },
      {
        title: "Document 2",
      },
      {
        title: "Document 3",
      },
    ],
    drinks: {
      alcoholic: [
        "gin-tonic",
        "gin-soda",
      ],
      others: [
        "coffee",
        "tea",
      ],
    },
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    names: [
      "Oscar",
      "Laura",
    ],
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Folder overrided site name",
    tags: [
      "pages",
      "sub-pages",
      "sub-sub-pages",
      "page7",
    ],
    title: "Page 7",
    url: "/pages/subpage/page7/",
  },
  dest: {
    ext: ".html",
    path: "/pages/subpage/page7/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.js",
    path: "/pages/subpage/page7",
    remote: undefined,
    slug: "page7",
  },
}
`;

snapshot[`Load the pages of a site 12`] = `
{
  content: "body {
  font-family: sans-serif;
  color: black;
}
",
  data: {
    content: "body {
  font-family: sans-serif;
  color: black;
}
",
    date: 1970-01-01T00:00:00.000Z,
    imagick: [
      {
        resize: [
          400,
          300,
        ],
        suffix: "-small",
      },
    ],
    mergedKeys: {
      imagick: "array",
      metas: "object",
      tags: "stringArray",
    },
    metas: {
      description: "Default description",
      title: "Default title",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    site: "Default site name",
    tags: [
      "pages",
    ],
    url: "/styles.css",
  },
  dest: {
    ext: ".css",
    path: "/styles",
  },
  src: {
    asset: true,
    ext: ".css",
    path: "/styles",
    remote: undefined,
    slug: "styles",
  },
}
`;
